--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "node server.js",
     "lite-server": "lite-server"
   },
+  "browser": {
+    "[module-name]": false
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/coding-boot-camp/unit18hw.git"
@@ -24,5 +27,9 @@
     "lite-server": "^2.5.3",
     "mongoose": "^5.5.15",
     "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "webpack": "^5.38.0",
+    "webpack-cli": "^4.7.0"
   }
 }
